# Transclip-qt

./: .gitignore  main.py  make  make.py  pyproject.toml  readme.md  requeriments.txt
resources/locales/: en.json  es.json
resources/other/: default.properties
resources/styles/: dark.css  index.json
src/: clipboard.py  config.py  constant.py  dialog.py  formatters.py  homedir.py  load.py  logger.py  monitor.py  requeriments.txt  settings.py  transclip.py  util.py  widgets.py
src/resources/locales/: en.json  es.json  index.json
src/resources/other/: contributors.txt  default_config.txt
src/resources/styles/: code.css  dark.css  index.json  nordic.css  sunset.css  yaru.css
src/resources/styles/css/: white.css
src/resources/styles/less/: dark.less
src/resources/styles/scss/: code.scss  dark.scss  white.scss
transclip/: clipboard.py  config.py  dialog.py  exceptions.py  logger.py  settings.py  util.py  widgets.py
