[project]
name = "transclip"
version = "0.1.0"
description = ""
authors = [
    {name = "jhondevcode",email = "jhondev.code@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8,<4.0"
dependencies = [
    "pyqt5 (>=5.15.11,<6.0.0)",
    "pyperclip (>=1.9.0,<2.0.0)",
    "setproctitle (>=1.3.5,<2.0.0)",
    "deep-translator (>=1.11.4,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
transclip = "main:main"

